testdata/golden/sema/invalid/array_to_string_non_printable.sg
type Foo = { x: int }

fn main() {
    let f: Foo[] = [Foo { x: 1 }];
    let s: string = f to string;
    let _ = s;
}
